@@ -15,4 +15,11 @@ mochad-0.1.3
     but does not work with all lamp modules.
     * Add example client programs in Perl and bash.
     * Add --version command line parameter.
+    * Add support for SP554 motion sensor
+
+mochad-0.1.4
+
+    * Fix RFCAM command so it takes house code as a parameter. For example,
+    RFCAM C CAMUP sends a camera pan up command on house code C.
+    Previously, RFCAM commands always used house code N. 
 
